# DocuQueryAI

./: .env.example  README.md  pyproject.toml
docs/: api-contracts.md  architecture.md  data-ingestion-pipeline.md  ops-runbooks.md  tenancy-and-rbac.md
infra/: compose.yml
infra/docker/: api.Dockerfile  worker.Dockerfile
scripts/: dev_up.sh  lint.sh  seed_demo_data.py
src/app/: config.py  main.py
src/app/api/v1/: __init__.py  health.py  info.py  router.py
src/app/auth/: routes.py
src/app/common/: error_handlers.py  exceptions.py
src/app/documents/: routes.py
src/app/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py  security_headers.py  timing.py
src/app/retrieval/: routes.py
tests/: test_sample.py
